# UForm

./: .gitignore  BENCHMARKS.md  CITATION.cff  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: prerelease.yml  release.yml
python/scripts/: bench_encoders.py
python/uform/: __init__.py  torch_encoders.py
